--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "express": "^4.18.1"
   }
