--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.20.0",
     "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.8.1"
   }
 }
