--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "date-fns": "^2.29.2",
     "express": "^4.18.1"
